--- a/Launcher/Launcher.Core/UserControls/SquareButtonWithRoundedBorders.xaml
+++ b/Launcher/Launcher.Core/UserControls/SquareButtonWithRoundedBorders.xaml
@@ -1,29 +1,32 @@
 ﻿<UserControl x:Class="Launcher.Core.UserControls.SquareButtonWithRoundedBorders"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Border x:Name="FirstBorder" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="3" BorderBrush="Green" BorderThickness="3" HorizontalAlignment="Stretch" Margin="2" VerticalAlignment="Stretch" CornerRadius="9">
-            
-            <Border x:Name="SecondBorder" BorderBrush="Yellow" BorderThickness="3" Margin="1" CornerRadius="9" Background="DarkGreen">
+        <Border x:Name="FirstBorder" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="3"
+                BorderBrush="Green" BorderThickness="3" HorizontalAlignment="Stretch" Margin="2"
+                VerticalAlignment="Stretch" CornerRadius="9">
+
+            <Border x:Name="SecondBorder" BorderBrush="Yellow" BorderThickness="3" Margin="1" CornerRadius="9"
+                    Background="DarkGreen">
                 <Border.Style>
                     <Style TargetType="{x:Type Border}">
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="DarkGoldenrod"/>
+                                <Setter Property="Background" Value="DarkGoldenrod" />
                             </Trigger>
                         </Style.Triggers>
                     </Style>
@@ -33,31 +36,33 @@
                         <Style TargetType="{x:Type Grid}">
                             <Style.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Background" Value="DarkGoldenrod"/>
+                                    <Setter Property="Background" Value="DarkGoldenrod" />
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
                     </Grid.Style>
                     <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock x:Name="ContentTextBlock" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="3" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Этап 1" Foreground="White" FontSize="22" Background="Transparent"/>
+                    <TextBlock x:Name="ContentTextBlock" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3"
+                               Grid.RowSpan="3" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Этап 1"
+                               Foreground="White" FontSize="22" Background="Transparent" />
 
-                </Grid> 
+                </Grid>
             </Border>
-            
+
         </Border>
-        
-           
-            <!--<TextBlock.Style>
+
+
+        <!--<TextBlock.Style>
                 <Style TargetType="TextBlock">
                     <Style.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
