--- a/Launcher/Launcher.Module.Inspection/Views/MainInspectionView.xaml
+++ b/Launcher/Launcher.Module.Inspection/Views/MainInspectionView.xaml
@@ -1,68 +1,88 @@
 ﻿<UserControl x:Class="Launcher.Module.Inspection.Views.MainInspectionView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:micro="http://www.caliburnproject.org"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="1400" d:DesignWidth="1600">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="130"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="130" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="130"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="130" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <ListBox x:Name="ListBoxMainInspectionModule" Grid.Row="0" Grid.Column="0" Grid.RowSpan="5" Background="Gray"/>
-        <Label HorizontalAlignment="Right" VerticalAlignment="Top" Content="Таймер обратного отчёта" Grid.Row="0" Grid.Column="3" FontSize="22"/>
-        <TabControl x:Name="TabControlInspectionModule" Grid.Row="0" Grid.Column="1" Grid.RowSpan="5" Grid.ColumnSpan="3" Background="LightGray">
+        <ListBox x:Name="ListBoxMainInspectionModule" Grid.Row="0" Grid.Column="0" Grid.RowSpan="5" Background="Gray" />
+        <Label HorizontalAlignment="Right" VerticalAlignment="Top" Content="Таймер обратного отчёта" Grid.Row="0"
+               Grid.Column="3" FontSize="22" />
+        <TabControl x:Name="TabControlInspectionModule" Grid.Row="0" Grid.Column="1" Grid.RowSpan="5"
+                    Grid.ColumnSpan="3" Background="LightGray">
             <TabItem Header="Машинист">
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition Width="0.8*"></ColumnDefinition>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="0.8*" />
                     </Grid.ColumnDefinitions>
-                    <ListView Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="5" Background="DarkGray" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+                    <ListView Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="5" Background="DarkGray"
+                              HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
                         <ListView.ItemsPanel>
                             <ItemsPanelTemplate>
-                                <StackPanel Orientation="Horizontal" Background="DarkGray" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" />
+                                <StackPanel Orientation="Horizontal" Background="DarkGray"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                                            ScrollViewer.VerticalScrollBarVisibility="Disabled" />
                             </ItemsPanelTemplate>
                         </ListView.ItemsPanel>
 
 
-                        <Button Background="#26A65B" Content="Без замечаний" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Green" BorderThickness="6" Width="200" Margin="1"/>
-                        <Button x:Name="Notice" Background="#FFBF00" Content="Замечания"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Green" BorderThickness="2" Width="200" Margin="1"/>
-                        <Button Content="Комментарий"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Green" BorderThickness="2" Width="200" Margin="1"/>
-                        <StackPanel Orientation="Horizontal"/>
+                        <Button Background="#26A65B" Content="Без замечаний" HorizontalContentAlignment="Center"
+                                VerticalContentAlignment="Center" BorderBrush="Green" BorderThickness="6" Width="200"
+                                Margin="1" />
+                        <Button x:Name="Notice" Background="#FFBF00" Content="Замечания"
+                                HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                                BorderBrush="Green" BorderThickness="2" Width="200" Margin="1" />
+                        <Button Content="Комментарий" HorizontalContentAlignment="Center"
+                                VerticalContentAlignment="Center" BorderBrush="Green" BorderThickness="2" Width="200"
+                                Margin="1" />
+                        <StackPanel Orientation="Horizontal" />
                         <!--<dc:CircularProgressControl Type="Basic" InnerRadius=".5" ValueStringFormat="%" RotationSpeedMultiplier="1.24" Width="170" Background="Transparent" VerticalContentAlignment="Stretch" HorizontalAlignment="Right" HorizontalContentAlignment="Right"/>-->
                     </ListView>
-                    <ListView Grid.Column="4" Grid.Row="2" Grid.RowSpan="4" Background="LightGray" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" Focusable="False" HorizontalAlignment="Right">
-                        <Button Margin="1" Content="Фото"   VerticalContentAlignment="Center" BorderBrush="Green" BorderThickness="2" HorizontalAlignment="Right" HorizontalContentAlignment="Center" Height="100" Width="100"/>
-                        <Button Margin="1" Content="Чертежи"   VerticalContentAlignment="Center" BorderBrush="Green"   BorderThickness="2"  HorizontalAlignment="Right" HorizontalContentAlignment="Center"  Height="100" Width="100"/>
-                        <Button Margin="1" Content="Документы"   VerticalContentAlignment="Center" BorderBrush="Green" BorderThickness="2"  HorizontalAlignment="Right" HorizontalContentAlignment="Center" Height="100"  Width="100"/>
+                    <ListView Grid.Column="4" Grid.Row="2" Grid.RowSpan="4" Background="LightGray"
+                              ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                              ScrollViewer.VerticalScrollBarVisibility="Disabled" Focusable="False"
+                              HorizontalAlignment="Right">
+                        <Button Margin="1" Content="Фото" VerticalContentAlignment="Center" BorderBrush="Green"
+                                BorderThickness="2" HorizontalAlignment="Right" HorizontalContentAlignment="Center"
+                                Height="100" Width="100" />
+                        <Button Margin="1" Content="Чертежи" VerticalContentAlignment="Center" BorderBrush="Green"
+                                BorderThickness="2" HorizontalAlignment="Right" HorizontalContentAlignment="Center"
+                                Height="100" Width="100" />
+                        <Button Margin="1" Content="Документы" VerticalContentAlignment="Center" BorderBrush="Green"
+                                BorderThickness="2" HorizontalAlignment="Right" HorizontalContentAlignment="Center"
+                                Height="100" Width="100" />
                     </ListView>
-                    <ContentControl x:Name="NoticeContentControl" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="5" ></ContentControl>
+                    <ContentControl x:Name="NoticeContentControl" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="5" />
                 </Grid>
 
             </TabItem>
@@ -70,70 +90,76 @@
             <TabItem Header="Помощник Машиниста">
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="130"></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition Height="130" />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="130"></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition Width="130" />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
                     </Grid.ColumnDefinitions>
-                    <ListView Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="5" Background="DarkGray" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                    <ListView Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="5" Background="DarkGray"
+                              HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch"
+                              ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                              ScrollViewer.VerticalScrollBarVisibility="Disabled">
                         <ListView.ItemsPanel>
                             <ItemsPanelTemplate>
-                                <StackPanel Orientation="Horizontal" Background="DarkGray" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" />
+                                <StackPanel Orientation="Horizontal" Background="DarkGray"
+                                            ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                                            ScrollViewer.VerticalScrollBarVisibility="Disabled" />
                             </ItemsPanelTemplate>
                         </ListView.ItemsPanel>
-                        <ListBoxItem Content="Фото" FontSize="30" Foreground="White"/>
-                        <ListBoxItem Content="Чертежи" FontSize="30" Foreground="White"/>
-                        <ListBoxItem Content="Документы" FontSize="30" Foreground="White"/>
-                        <ListBoxItem Background="#26A65B" Content="Без замечаний" FontSize="30" Foreground="White"/>
-                        <ListBoxItem Background="#FFDAE402" Content="Замечания" FontSize="30" Foreground="White"/>
-                        <ListBoxItem Content="Комментарий" FontSize="30" Foreground="White"/>
+                        <ListBoxItem Content="Фото" FontSize="30" Foreground="White" />
+                        <ListBoxItem Content="Чертежи" FontSize="30" Foreground="White" />
+                        <ListBoxItem Content="Документы" FontSize="30" Foreground="White" />
+                        <ListBoxItem Background="#26A65B" Content="Без замечаний" FontSize="30" Foreground="White" />
+                        <ListBoxItem Background="#FFDAE402" Content="Замечания" FontSize="30" Foreground="White" />
+                        <ListBoxItem Content="Комментарий" FontSize="30" Foreground="White" />
                     </ListView>
                 </Grid>
             </TabItem>
             <TabItem Header="Ремонтники">
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="130"></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition Height="130" />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="130"></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition Width="130" />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
                     </Grid.ColumnDefinitions>
-                    <ListView Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="5" Background="DarkGray" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+                    <ListView Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="5" Background="DarkGray"
+                              HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
                         <ListView.ItemsPanel>
                             <ItemsPanelTemplate>
-                                <StackPanel Orientation="Horizontal" Background="DarkGray"  />
+                                <StackPanel Orientation="Horizontal" Background="DarkGray" />
                             </ItemsPanelTemplate>
                         </ListView.ItemsPanel>
-                        <ListBoxItem Content="Фото" FontSize="30" Foreground="White"/>
-                        <ListBoxItem Content="Чертежи" FontSize="30" Foreground="White"/>
-                        <ListBoxItem Content="Документы" FontSize="30" Foreground="White"/>
-                        <ListBoxItem Background="#26A65B" Content="Без замечаний" FontSize="30" Foreground="White"/>
-                        <ListBoxItem Background="#FFDAE402" Content="Замечания" FontSize="30" Foreground="White"/>
-                        <ListBoxItem Content="Комментарий" FontSize="30" Foreground="White"/>
+                        <ListBoxItem Content="Фото" FontSize="30" Foreground="White" />
+                        <ListBoxItem Content="Чертежи" FontSize="30" Foreground="White" />
+                        <ListBoxItem Content="Документы" FontSize="30" Foreground="White" />
+                        <ListBoxItem Background="#26A65B" Content="Без замечаний" FontSize="30" Foreground="White" />
+                        <ListBoxItem Background="#FFDAE402" Content="Замечания" FontSize="30" Foreground="White" />
+                        <ListBoxItem Content="Комментарий" FontSize="30" Foreground="White" />
                     </ListView>
                 </Grid>
             </TabItem>
