--- a/Launcher/Launcher/Resources/Style.xaml
+++ b/Launcher/Launcher/Resources/Style.xaml
@@ -10,7 +10,7 @@
     <!--60% Выделение-->
     <Color x:Key="AccentColor2">#60E861</Color>
     <!--40%-->
-    <Color x:Key="AccentColor3">#58D65A</Color> 
+    <Color x:Key="AccentColor3">#58D65A</Color>
     <!--20% Наведение-->
     <Color x:Key="AccentColor4">#69FF6B</Color>
 
@@ -35,7 +35,7 @@
     <SolidColorBrush x:Key="WindowTitleColorBrush" Color="{StaticResource AccentColor}" options:Freeze="True" />
     <!--Цвет шапки окна-->
 
-    <SolidColorBrush x:Key="AccentSelectedColorBrush" Color="White" options:Freeze="True" /> 
+    <SolidColorBrush x:Key="AccentSelectedColorBrush" Color="White" options:Freeze="True" />
     <!--Цвет выделеннного текста-->
 
     <LinearGradientBrush x:Key="ProgressBrush" EndPoint="0.001,0.5" StartPoint="1.002,0.5" options:Freeze="True">
@@ -47,6 +47,7 @@
     <SolidColorBrush x:Key="RightArrowFill" Color="{StaticResource AccentColor}" options:Freeze="True" />
 
     <Color x:Key="IdealForegroundColor">Black</Color>
-    <SolidColorBrush x:Key="IdealForegroundColorBrush" Color="{StaticResource IdealForegroundColor}" options:Freeze="True" />
-    
+    <SolidColorBrush x:Key="IdealForegroundColorBrush" Color="{StaticResource IdealForegroundColor}"
+                     options:Freeze="True" />
+
 </ResourceDictionary>
