--- a/Launcher/Launcher/Views/LoginView.xaml
+++ b/Launcher/Launcher/Views/LoginView.xaml
@@ -1,9 +1,9 @@
 ﻿<UserControl x:Class="Launcher.Views.LoginView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <TabControl SelectedIndex="1">
@@ -15,64 +15,104 @@
             <TabItem Header="Регистрация" HorizontalAlignment="Center">
                 <Grid Background="{StaticResource AccentColorBrush}" Width="auto" Height="auto">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="1.5*"></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition Height="1.5*" />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition Width="1.5*"></ColumnDefinition>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="1.5*" />
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" TextWrapping="WrapWithOverflow" Foreground="White" HorizontalAlignment="Center" FontStyle="Italic" TextAlignment="Center">
-                        Здравствуйте,для работы с программой, необходимо зарегистрироваться. ООО "ПКБ ЖТ" <Hyperlink NavigateUri="http://pkbzht.ru/" Foreground="White"> http://pkbzht.ru/</Hyperlink>
+                    <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" TextWrapping="WrapWithOverflow"
+                               Foreground="White" HorizontalAlignment="Center" FontStyle="Italic"
+                               TextAlignment="Center">
+                        Здравствуйте,для работы с программой, необходимо зарегистрироваться. ООО "ПКБ ЖТ"
+                        <Hyperlink NavigateUri="http://pkbzht.ru/" Foreground="White"> http://pkbzht.ru/</Hyperlink>
                     </TextBlock>
-                    <Label Name="Name_lbl"      Grid.Row="1" Grid.Column="0" Background="{StaticResource AccentColorBrush}" Foreground="White" Content="Введите Имя" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" BorderBrush="White"  BorderThickness="0.9" />
-                    <TextBox Name="Name_tbx"    Grid.Row="1" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
-                    <Label Name="Family_lbl"    Grid.Row="2" Grid.Column="0" Background="{StaticResource AccentColorBrush}" Foreground="White" Content="Введите Фамилию" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" BorderBrush="White"  BorderThickness="0.9"/>
-                    <TextBox Name="Family_tbx"  Grid.Row="2" Grid.Column="1"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
-                    <Label Name="Login_lbl"     Grid.Row="3" Grid.Column="0" Background="{StaticResource AccentColorBrush}" Foreground="White" Content="Введите Табельный номер" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" BorderBrush="White"  BorderThickness="0.9"/>
-                    <TextBox Name="Login_tbx"   Grid.Row="3" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
-                    <Label Name="Password_lbl1" Grid.Row="4" Grid.Column="0" Background="{StaticResource AccentColorBrush}" Foreground="White" Content="Введите Пароль" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" BorderBrush="White"  BorderThickness="0.9"/>
-                    <PasswordBox Name="Passwb1" Grid.Row="4" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
-                    <Label Name="Password_lbl2" Grid.Row="5" Grid.Column="0" Background="{StaticResource AccentColorBrush}" Foreground="White" Content="Повторите пароль" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" BorderBrush="White"  BorderThickness="0.9"/>
-                    <PasswordBox Name="Passwb2" Grid.Row="5" Grid.Column="1"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
-                    <Label Name="email_lbl"     Grid.Row="6" Grid.Column="0" Background="{StaticResource AccentColorBrush}" Foreground="White" Content="Электронная почта"  HorizontalContentAlignment="Left" VerticalContentAlignment="Center" BorderBrush="White"  BorderThickness="0.9"/>
-                    <TextBox Name="email_tbx"   Grid.Row="6" Grid.Column="1" />
-                    <Button Name="Accept_btn"   Grid.Row="7" Grid.Column="0"  Grid.ColumnSpan="2" Content="Зарегистрироваться" />
+                    <Label Name="Name_lbl" Grid.Row="1" Grid.Column="0" Background="{StaticResource AccentColorBrush}"
+                           Foreground="White" Content="Введите Имя" HorizontalContentAlignment="Left"
+                           VerticalContentAlignment="Center" BorderBrush="White" BorderThickness="0.9" />
+                    <TextBox Name="Name_tbx" Grid.Row="1" Grid.Column="1" HorizontalContentAlignment="Center"
+                             VerticalContentAlignment="Center" BorderBrush="Black" Background="White"
+                             BorderThickness="0.4" />
+                    <Label Name="Family_lbl" Grid.Row="2" Grid.Column="0"
+                           Background="{StaticResource AccentColorBrush}" Foreground="White" Content="Введите Фамилию"
+                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center" BorderBrush="White"
+                           BorderThickness="0.9" />
+                    <TextBox Name="Family_tbx" Grid.Row="2" Grid.Column="1" HorizontalContentAlignment="Center"
+                             VerticalContentAlignment="Center" BorderBrush="Black" Background="White"
+                             BorderThickness="0.4" />
+                    <Label Name="Login_lbl" Grid.Row="3" Grid.Column="0" Background="{StaticResource AccentColorBrush}"
+                           Foreground="White" Content="Введите Табельный номер" HorizontalContentAlignment="Left"
+                           VerticalContentAlignment="Center" BorderBrush="White" BorderThickness="0.9" />
+                    <TextBox Name="Login_tbx" Grid.Row="3" Grid.Column="1" HorizontalContentAlignment="Center"
+                             VerticalContentAlignment="Center" BorderBrush="Black" Background="White"
+                             BorderThickness="0.4" />
+                    <Label Name="Password_lbl1" Grid.Row="4" Grid.Column="0"
+                           Background="{StaticResource AccentColorBrush}" Foreground="White" Content="Введите Пароль"
+                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center" BorderBrush="White"
+                           BorderThickness="0.9" />
+                    <PasswordBox Name="Passwb1" Grid.Row="4" Grid.Column="1" HorizontalContentAlignment="Center"
+                                 VerticalContentAlignment="Center" BorderBrush="Black" Background="White"
+                                 BorderThickness="0.4" />
+                    <Label Name="Password_lbl2" Grid.Row="5" Grid.Column="0"
+                           Background="{StaticResource AccentColorBrush}" Foreground="White" Content="Повторите пароль"
+                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center" BorderBrush="White"
+                           BorderThickness="0.9" />
+                    <PasswordBox Name="Passwb2" Grid.Row="5" Grid.Column="1" HorizontalContentAlignment="Center"
+                                 VerticalContentAlignment="Center" BorderBrush="Black" Background="White"
+                                 BorderThickness="0.4" />
+                    <Label Name="email_lbl" Grid.Row="6" Grid.Column="0" Background="{StaticResource AccentColorBrush}"
+                           Foreground="White" Content="Электронная почта" HorizontalContentAlignment="Left"
+                           VerticalContentAlignment="Center" BorderBrush="White" BorderThickness="0.9" />
+                    <TextBox Name="email_tbx" Grid.Row="6" Grid.Column="1" />
+                    <Button Name="Accept_btn" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"
+                            Content="Зарегистрироваться" />
                     <!--<Label-->
                 </Grid>
             </TabItem>
             <TabItem Header="Вход">
-                <Grid Background="{StaticResource AccentColorBrush}"  >
+                <Grid Background="{StaticResource AccentColorBrush}">
                     <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition Width="3*"></ColumnDefinition>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="3*" />
                     </Grid.ColumnDefinitions>
-                    <Label              Grid.Column="0" Grid.Row="0" Content="Табельный номер" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"   BorderBrush="Black" Background="White" BorderThickness="0.4" Margin="5,5,2.5,2.5" HorizontalAlignment="Stretch" />
-                    <TextBox            Grid.Column="1" Grid.Row="0" Name="EntryLogin" Margin="2.5,2.5,5,2.5" />
-                    <Label              Grid.Column="0" Grid.Row="1" Content="Пароль"   HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4" Margin="5,2.5,2.5,2.5" HorizontalAlignment="Stretch"  />
-                    <PasswordBox        Grid.Column="1" Grid.Row="1" Name="EntryPassword" Margin="2,3,5,2" />
-                    <Label              Grid.Column="0" Grid.Row="2" Content="Номер локомотива" Background="White" Margin="5,2.5,2.5,2.5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black"  BorderThickness="0.4"  HorizontalAlignment="Stretch" />
-                    <TextBox            Grid.Column="1" Grid.Row="2" x:Name="Number_Locomotion"  Margin="2.5,2.5,5,2.5"/>
-                    <Label              Grid.Column="0" Grid.Row="3" Content="Номер поезда" Background="White" Margin="5,2.5,2.5,2.5" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black"  BorderThickness="0.4" />
-                    <TextBox            Grid.Column="1" Grid.Row="3" Margin="2.5,2.5,5,2.5"/>
-                    <Label              Grid.Column="0" Grid.Row="4" Content="Вес поезда (тонн)" Background="White" Margin="5,2.5,2.5,5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black"  BorderThickness="0.4"  HorizontalAlignment="Stretch" />
-                    <TextBox            Grid.Column="1" Grid.Row="4" Margin="2.5,2.5,5,5"/>
-                    <Button             Grid.Column="0" Grid.Row="5" x:Name="Login" Grid.ColumnSpan="2" Content="Вход в программу" FontSize="19" Foreground="{StaticResource AccentColorBrush}"/>
+                    <Label Grid.Column="0" Grid.Row="0" Content="Табельный номер" HorizontalContentAlignment="Center"
+                           VerticalContentAlignment="Center" BorderBrush="Black" Background="White"
+                           BorderThickness="0.4" Margin="5,5,2.5,2.5" HorizontalAlignment="Stretch" />
+                    <TextBox Grid.Column="1" Grid.Row="0" Name="EntryLogin" Margin="2.5,2.5,5,2.5" />
+                    <Label Grid.Column="0" Grid.Row="1" Content="Пароль" HorizontalContentAlignment="Center"
+                           VerticalContentAlignment="Center" BorderBrush="Black" Background="White"
+                           BorderThickness="0.4" Margin="5,2.5,2.5,2.5" HorizontalAlignment="Stretch" />
+                    <PasswordBox Grid.Column="1" Grid.Row="1" Name="EntryPassword" Margin="2,3,5,2" />
+                    <Label Grid.Column="0" Grid.Row="2" Content="Номер локомотива" Background="White"
+                           Margin="5,2.5,2.5,2.5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                           BorderBrush="Black" BorderThickness="0.4" HorizontalAlignment="Stretch" />
+                    <TextBox Grid.Column="1" Grid.Row="2" x:Name="Number_Locomotion" Margin="2.5,2.5,5,2.5" />
+                    <Label Grid.Column="0" Grid.Row="3" Content="Номер поезда" Background="White"
+                           Margin="5,2.5,2.5,2.5" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"
+                           VerticalContentAlignment="Center" BorderBrush="Black" BorderThickness="0.4" />
+                    <TextBox Grid.Column="1" Grid.Row="3" Margin="2.5,2.5,5,2.5" />
+                    <Label Grid.Column="0" Grid.Row="4" Content="Вес поезда (тонн)" Background="White"
+                           Margin="5,2.5,2.5,5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                           BorderBrush="Black" BorderThickness="0.4" HorizontalAlignment="Stretch" />
+                    <TextBox Grid.Column="1" Grid.Row="4" Margin="2.5,2.5,5,5" />
+                    <Button Grid.Column="0" Grid.Row="5" x:Name="Login" Grid.ColumnSpan="2" Content="Вход в программу"
+                            FontSize="19" Foreground="{StaticResource AccentColorBrush}" />
                 </Grid>
             </TabItem>
         </TabControl>
