--- a/Launcher/Launcher/Views/UpdaterView.xaml
+++ b/Launcher/Launcher/Views/UpdaterView.xaml
@@ -1,27 +1,27 @@
 ﻿<UserControl x:Class="Launcher.Views.UpdaterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Button x:Name="Start" Content="Поехали" Grid.Row="3" Grid.Column="3"/>
-            <ProgressBar Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="3" Height="Auto"/>
-            <WebBrowser  Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="3"></WebBrowser>
+            <Button x:Name="Start" Content="Поехали" Grid.Row="3" Grid.Column="3" />
+            <ProgressBar Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="3" Height="Auto" />
+            <WebBrowser Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="3" />
         </Grid>
     </Grid>
 </UserControl>
